# guardrails

./: .env.demo  .env.example  .gitignore  LICENSE  NOTICE  README.md  build_aio_demo_image.sh  build_aio_prd_image.sh  docker-compose-demo.yml  docker-compose.yml  start_aio_demo.sh  stop_aio_demo.sh
gateway-engine/: .dockerignore  Cargo.toml  Dockerfile  README.md  start.sh
gateway-engine/src/: completions_handler.rs  constants.rs  cq_scan_handler.rs  crypto.rs  main.rs  moderations_handler.rs  pipeline_types.rs  provider_test_handler.rs  responses_handler.rs  scan_handler.rs
gateway-engine/src/adapters/: mod.rs
gateway-engine/src/adapters/content_quality/: mod.rs  trulens.rs
gateway-engine/src/adapters/embedding/: google.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs
gateway-engine/src/adapters/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs
gateway-engine/src/agents/: mod.rs
gateway-engine/src/agents/cache/: key.rs  lookup.rs  mod.rs  semantic.rs  store.rs  write.rs
gateway-engine/src/agents/classification/: classifier.rs  mod.rs  t2_analyzer.rs
gateway-engine/src/agents/content_quality/: builtin.rs  client.rs  mod.rs  rules.rs
gateway-engine/src/agents/embedding/: client.rs  handler.rs  mod.rs  semantic_search.rs
gateway-engine/src/agents/forwarding/: body_mutation.rs  content_quality_stage.rs  forward.rs  helpers.rs  meter_check.rs  mod.rs  output_scan.rs  provider_call.rs  response.rs  streaming.rs
gateway-engine/src/agents/knowledge/: knowledge_developer.rs  mod.rs
gateway-engine/src/agents/refusal/: mod.rs
gateway-engine/src/content/: extraction.rs  mod.rs  parser.rs  tool_calls.rs  translation.rs
gateway-engine/src/enforcement/: mod.rs  rules.rs
gateway-engine/src/policy/: acl.rs  admin_keys.rs  allowed_tools.rs  api_keys.rs  content_quality_prompt.rs  content_quality_provider.rs  detectors.rs  embeddings.rs  endpoint_validation.rs  frameworks.rs  gateway_keys.rs  mod.rs  providers.rs  response_cache.rs  t2_prompt.rs
gateway-engine/src/request_handler/: enforcement.rs  handler.rs  helpers.rs  mod.rs  pipeline.rs  preamble.rs
gateway-engine/src/tools/: acl_check.rs  auth.rs  json_response.rs  knowledge_writer.rs  log_writer.rs  mod.rs  provider_meter.rs  quota_tracker.rs  rate_limiter.rs  telemetry.rs  token_estimator.rs  tool_guard.rs
gateway-engine/tests/: byte_diff.rs  mock_server.rs  mode_detection_matrix.rs  package-lock.json  package.json  sdk_smoke_anthropic.py  sdk_smoke_anthropic_js.mjs  sdk_smoke_openai.py  sdk_smoke_openai_js.mjs
gateway-engine/tests/fixtures/: anthropic_anthropic_streaming.json  anthropic_anthropic_text.json  anthropic_anthropic_tool_use.json  anthropic_openai.json  gemini_generatecontent.json  ollama_chat.json  openai_anthropic.json  openai_openai_streaming.json  openai_openai_text.json  openai_openai_tools.json
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: basic_scan.py  chat_streaming.py  content_quality.py  embeddings.py  health_check.py  moderation.py  sync_example.py
sdk-python/src/c6_guardrails/: __init__.py  client.py  errors.py  sync_client.py  transport.py
sdk-python/tests/: conftest.py  test_chat.py  test_convenience.py  test_cq_scan.py  test_embedding.py  test_health.py  test_moderation.py  test_scan.py  test_sync_client.py
(+590 files in other folders)
