[package]
name = "c6-guardrails-gateway-engine"
version = "0.1.1"
edition = "2024"

[dependencies]
axum        = { version = "0.7.5", features = ["json", "tokio", "http1", "macros"] }
hyper       = { version = "1",   features = ["http1", "server"] }
tower       = { version = "0.5", features = ["util"] }
tokio       = { version = "1",   features = ["full"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tower-http  = { version = "0.6", features = ["cors", "limit", "timeout"] }
rand        = "0.8"
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
pgvector    = { version = "0.4", features = ["sqlx"] }
sha2        = "0.10"
hkdf        = "0.12"
aes-gcm     = "0.10"
base64      = "0.22"
subtle      = "2"
chrono      = { version = "0.4", features = ["clock", "serde"] }
regex       = "1"
url         = "2"
ipnet       = "2"
moka        = { version = "0.12", features = ["sync"] }
futures     = "0.3"

# Observability
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json", "fmt"] }
prometheus                  = "0.13"
opentelemetry               = "0.27"
opentelemetry_sdk           = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp          = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry       = "0.28"

# Phase 0 integration test targets — run individually with `cargo test --test <name>`
[[test]]
name = "byte_diff"
path = "tests/byte_diff.rs"

[[test]]
name = "mock_server"
path = "tests/mock_server.rs"

[[test]]
name = "mode_detection_matrix"
path = "tests/mode_detection_matrix.rs"


[dev-dependencies]
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
http = "1"
hyper-util = { version = "0.1", features = ["client", "server", "http1"] }
anyhow = "1"

[profile.release]
lto           = true   # cross-crate inlining — measurable throughput gain for async Rust
codegen-units = 1      # single unit allows maximum optimization across the whole binary
opt-level     = 3
strip         = true   # remove debug symbols → smaller image, faster cold start
panic         = "abort" # no stack unwinding → tighter code, smaller binary
