[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c6-guardrails"
version = "0.1.1"
description = "C6 Guardrails client SDK for Python"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.33",
    "ruff>=0.8",
    "mypy>=1.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.10"
packages = ["c6_guardrails"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
